--- a/style.css
+++ b/style.css
@@ -6,16 +6,16 @@
 }
 
 body{
-  background:#222;
+  background:#3e3e3e;
 }
 
 .card {
   width: 90%;
   max-width: 470px;
-  background: linear-gradient(135deg, #00feba, #5b548a);
+  background: linear-gradient(135deg, #00cbfe, #b1c3e3);
   color:#fff;
   margin: 100px auto 0;
-  border-radius: 20px;
+  border-radius: 30px;
   padding: 40px 35px;
   text-align: center;
 }
