--- a/style.css
+++ b/style.css
@@ -6,8 +6,19 @@
 }
 
 body{
-  background:#3e3e3e;
+  background:#fff;
 }
+
+#toggle-dark-mode{
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  background: #333333;
+  color: #fff
+}
+
 
 .card {
   width: 90%;
