--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body{
   background:#fff;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 #toggle-dark-mode{
@@ -16,7 +17,8 @@ body{
   padding: 10px 20px;
   border-radius: 5px;
   background: #333333;
-  color: #fff
+  color: #fff;
+  cursor: pointer;
 }
 
 
